--- a/style/style.css
+++ b/style/style.css
@@ -180,3 +180,16 @@ body {
     background: var(--Sky-Blue, #79CFFF);
 }
 /* End Web-Service */
+/* Start Gallery*/
+.gallery-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.gallery-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    
+}
+/* End Gallery */
